# ETH-Semester-Project

./: .gitignore  .gitmodules  README.md  annotations.csv  image_gps_sync.py  railway.pkl  requirements.txt
archive/: main2.py  railway1.py  railway2.py
diagrams/: .$Method Overview.drawio.bkp  Method Overview.drawio
new_src/: evaluation.py  general.py  image_features.py  import_osm.py  keyframe.py  main.py  map_info.py  transformation.py  visualisation.py
report/: report.aux  report.bbl  report.blg  report.fdb_latexmk  report.fls  report.out  report.synctex(busy)  report.tex  report.toc
report/Latex_files_report/: abstract.tex  chapter.tex  introduction.tex  preface.tex  symbols.tex
report/bibliography/: references.bib
report/chapters/: 0_abstract.tex  0_symbols.tex  1_introduction.tex  2_background.tex  3_method.tex  4_implementation.tex  5_results.tex  6_conclusion.tex  abstract.tex  latex_tips.tex  preface.tex
src/: XZposition_estimate.py  Yposition_estimate.py  ZRot_estimate.py  annotation.py  bag_data.py  data.py  gps.py  integration.py  interface.py  keyframe.py  main.py  map_info.py  railway.py  test.py  transformation.py  vanishing_point_detection.py  visualisation.py  visualization.py
src/archive/: main.py  main_interface.py  optimization_combined.cc  optimization_sequential.cc
src/cpp/: CMakeLists.txt  optimization copy.cc  optimization error.cc  optimization quaternion.cc  optimization.cc
src/future/: imu.py
src/method/: annotation.py  annotations.py  camera.py  data.py  gps.py  import_osm.py  keyframe.py  main.py  main_interface.py  railway.py  transformation.py  visualisation.py
src/method/future/: odometry.py
src/new_approach/: annotations.py  camera.py  data.py  evaluation.py  features.py  gps.py  image.py  image_features.py  import_osm.py  keyframe.py  main.py  map_info.py  optimization.py  transformation.py  visualisation.py
src/old/: XRot_estimate.py
src/old_approach/: XZposition_estimate.py  YRot_estimate.py  main.py  track_information.py  transformation_matrices.py
(+2 files in other folders)
